--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -96,7 +96,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="1dp"
-                            android:text="@string/a0696" />
+                            android:text="@string/a0696"
+                            android:visibility="gone" />
 
                         <EditText
                             android:id="@+id/a0696x"
