--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="callback"
-            type="edu.aku.hassannaqvi.matiari_cohorts.ui.other.LoginActivity" />
+            type="edu.aku.hassannaqvi.matiari_cohorts.ui.other.loginActivity.LoginActivity" />
     </data>
 
     <LinearLayout
@@ -35,15 +35,12 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="@drawable/app_bg_color"
-            android:padding="12dp">
+            android:padding="16dp">
 
             <LinearLayout
-
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
                 android:background="@color/white"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -55,6 +52,7 @@
                     android:src="@drawable/agakhan" />
 
                 <TextView
+                    style="@style/labels"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -65,6 +63,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    style="@style/labels"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -102,6 +101,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    style="@style/labels"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="Username"
@@ -109,7 +109,6 @@
                                     android:textColor="@color/black_overlay"
                                     android:textSize="16sp"
                                     android:textStyle="bold" />
-
 
                                 <EditText
                                     android:id="@+id/username"
@@ -136,8 +135,8 @@
                                     android:textColor="@color/colorPrimary"
                                     android:textSize="18sp" />
 
-
                                 <TextView
+                                    style="@style/labels"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="4dp"
@@ -183,18 +182,9 @@
                                         android:layout_height="match_parent"
                                         android:layout_weight="2"
                                         android:background="@drawable/et_style"
-                                        android:onClick="onShowPasswordClick"
+                                        android:onClick="@{callback.onShowPasswordClick}"
                                         android:src="@drawable/ic_red_eye"
                                         android:textSize="20sp" />
-
-                                </LinearLayout>
-
-                                <!--Province-->
-                                <LinearLayout
-                                    android:id="@+id/spinners"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="vertical">
 
                                 </LinearLayout>
 
@@ -212,11 +202,12 @@
                                     android:layout_gravity="center"
                                     android:layout_marginTop="16dp"
                                     android:layout_marginBottom="16dp"
-                                    android:background="@drawable/buttonshapewhitebg"
+                                    android:background="@color/colorPrimaryDark"
+                                    android:onClick="@{callback.onLoginClick}"
                                     android:paddingStart="12dp"
                                     android:paddingEnd="12dp"
                                     android:text="Login"
-                                    android:textColor="@color/colorPrimaryDark"
+                                    android:textColor="@color/white"
                                     android:textStyle="bold"
                                     android:visibility="visible" />
 
@@ -230,11 +221,11 @@
                                     android:background="@drawable/outline_btn"
                                     android:drawableStart="@drawable/ic_download"
                                     android:drawablePadding="12dp"
-                                    android:onClick="onSyncDataClick"
+                                    android:onClick="@{callback.onSyncDataClick}"
                                     android:paddingStart="12dp"
                                     android:paddingEnd="12dp"
                                     android:text="Download User Data"
-                                    android:textColor="@color/colorPrimaryDark" />
+                                    android:textColor="@color/white" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -279,11 +270,11 @@
 
                     <TextView
                         android:id="@+id/txtinstalldate"
+                        style="@style/labels"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="24dp"
-
                         android:gravity="center"
                         android:shadowColor="#d6d6d6"
                         android:shadowDx="1"
