--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,17 +53,17 @@
                 android:orientation="vertical">
 
                 <include
-                    android:layout_marginTop="@dimen/_10sdp"
                     android:id="@+id/statisticLayout"
                     layout="@layout/statistic_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp" />
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_30sdp"
+                    android:layout_marginTop="@dimen/_15sdp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -83,10 +83,12 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/adminSection"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <Button
                         android:id="@+id/databaseBtn"
