--- a/app/src/main/res/layout/statistic_layout.xml
+++ b/app/src/main/res/layout/statistic_layout.xml
@@ -32,7 +32,7 @@
 
                 <TextView
                     android:id="@+id/hhStatus"
-                    android:layout_width="@dimen/_45sdp"
+                    android:layout_width="@dimen/_70sdp"
                     android:layout_height="@dimen/_20sdp"
                     android:background="@color/black_overlay"
                     android:elevation="@dimen/_1sdp"
@@ -86,22 +86,38 @@
 
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="@dimen/_157sdp"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/subSummary"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:orientation="vertical">
 
+                        <ProgressBar
+                            android:id="@+id/loading"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:elevation="@dimen/_2sdp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
                         <LinearLayout
+                            android:id="@+id/syncLinearLayout"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_60sdp"
-                            android:background="@drawable/border_bottom"
-                            android:orientation="horizontal">
+                            android:background="@drawable/app_bg_gray"
+                            android:gravity="center"
+                            android:alpha="0"
+                            android:orientation="horizontal"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
 
                             <LinearLayout
-                                android:layout_width="@dimen/_60sdp"
+                                android:layout_width="@dimen/_62sdp"
                                 android:layout_height="match_parent"
-                                android:background="@drawable/app_bg_gray"
                                 android:gravity="center"
                                 android:orientation="vertical">
 
@@ -130,7 +146,6 @@
                             <ImageView
                                 android:layout_width="@dimen/_25sdp"
                                 android:layout_height="match_parent"
-                                android:background="@drawable/app_bg_gray"
                                 android:padding="@dimen/_3sdp"
                                 android:src="@drawable/ic_swap"
                                 android:textSize="@dimen/_30sdp"
@@ -139,7 +154,6 @@
                             <LinearLayout
                                 android:layout_width="@dimen/_62sdp"
                                 android:layout_height="match_parent"
-                                android:background="@drawable/app_bg_gray"
                                 android:gravity="center"
                                 android:orientation="vertical">
 
@@ -168,10 +182,16 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/statusLinearLayout"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_60sdp"
                             android:background="@color/white"
-                            android:orientation="horizontal">
+                            android:alpha="0"
+                            android:orientation="horizontal"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/syncLinearLayout">
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -258,7 +278,7 @@
                         </LinearLayout>
 
 
-                    </LinearLayout>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
 
             </RelativeLayout>
