--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="callback"
-            type="edu.aku.hassannaqvi.matiari_cohorts.ui.other.mainActivity.MainActivity" />
+            type="edu.aku.hassannaqvi.matiari_cohorts.ui.other.main_activity.MainActivity" />
     </data>
 
     <LinearLayout
