--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.sections.dashboardActivity.DashboardActivity">
+        tools:context=".ui.sections.dashboard_activity.DashboardActivity">
 
 
         <androidx.fragment.app.FragmentContainerView
