--- a/app/src/main/res/layout/fragment_child_list.xml
+++ b/app/src/main/res/layout/fragment_child_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.sections.dashboardActivity.fragments.ChildListFragment">
+    tools:context=".ui.sections.dashboard_activity.fragments.ChildListFragment">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/content_scroll"
