--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -130,7 +130,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="12dp"
                     android:background="@color/colorPrimary"
-                    android:onClick="@{() -> callback.BtnEnd()}"
+                    android:onClick="BtnEnd"
                     android:padding="10dp"
                     android:text="End Interview"
                     android:textColor="@color/white" />
