--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -203,7 +203,7 @@
                                     android:layout_marginTop="16dp"
                                     android:layout_marginBottom="16dp"
                                     android:background="@color/colorPrimaryDark"
-                                    android:onClick="@{callback.onLoginClick}"
+                                    android:onClick="onLoginClick"
                                     android:paddingStart="12dp"
                                     android:paddingEnd="12dp"
                                     android:text="Login"
